Bug 279281 - Konqueror: Directory Filter - filter box on Filter Toolbar is missing
Summary: Konqueror: Directory Filter - filter box on Filter Toolbar is missing
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: dirfilterplugin (other bugs)
Version First Reported In: 4.7.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-03 12:05 UTC by Andrey
Modified: 2012-09-13 12:59 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.4
Sentry Crash Report:


Attachments
Patch to restore the dirfilterplugin filename filter (2.16 KB, patch)
2012-05-03 09:31 UTC, Simon St James
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrey 2011-08-03 12:05:45 UTC
Version:           4.7.0 (using KDE 4.7.0) 
OS:                Linux

After updating to KDE 4.7.0 filter box in 
"Directory Filter" plugin has disappeared.

dirfilterplugin.so is installed 
(konqueror-plugins package in openSUSE)

Directory Filter plugin is enabled.

Reproducible: Always

Steps to Reproduce:
1. Open Konqueror
2. Try to add filter bar

Actual Results:  
No filter bar can be enabled.

Expected Results:  
Filter bar should be accessible.
Comment 1 Burkhard Lück 2011-08-03 16:14:56 UTC
Confirmed with kubuntu 11.04 kde 4.7.0 and master/branch 4.7 compiled from sources.
Comment 2 Hannes Schniepp 2011-10-31 13:27:35 UTC
Still there in kubuntu 11.04 with the upgrade to KDE 4.7.2. 

I also noted that earlier versions of konqueror (for instance 4.4.5) allowed me to use wildcard in the addressbar, for instance "~/u*" would show only files starting with "u" in my home directory. May be totally unrelated. Maybe, I should file a separate bug.
Comment 3 Romain GUINOT 2011-11-13 15:59:45 UTC
Also missing on Fedora 16, KDE 4.7.3 from the repos.
Comment 4 Dawit Alemayehu 2011-11-19 07:59:49 UTC
The plugin does not work because Konqueror now uses Dolphin's KPart for file management handling of its own file management library. Unfortunately, the directory filter plugin only works with the old file manager. In fact, it used a hack to make such filtering possible and since I do not have the time to work on it, the plugin will not be available until someone steps and update it.
Comment 5 Andrey 2011-11-19 09:06:45 UTC
If Konqueror uses Dolphins KPart, 
maybe it possible to enable Dolphin's "Filter bar" in Konqueror?
(Ctrl+I, Tools -> Show Filter Bar)

That can substitute at least some of Directory Filter functionality.
Comment 6 Dawit Alemayehu 2011-11-21 22:46:36 UTC
(In reply to comment #5)
> If Konqueror uses Dolphins KPart, 
> maybe it possible to enable Dolphin's "Filter bar" in Konqueror?
> (Ctrl+I, Tools -> Show Filter Bar)

Unfortunately Dolphin's filter bar is not reusable from other applications.

The good news is that I have found the workaround to the problem that prevented the mime-type based filter from working in the first place ; so at least that can be fixed.
 
The bad news is that only the mime-type based filtering will work. Name based filtering will not work because its support seems to have been disabled in Dolphin's file management KPart. Hence, I have disabled that field from being displayed.
Comment 7 Burkhard Lück 2011-11-21 22:53:59 UTC
(In reply to comment #6)
> 
> The good news is that I have found the workaround to the problem that prevented
> the mime-type based filter from working in the first place ; so at least that
> can be fixed.
> 
> The bad news is that only the mime-type based filtering will work. Name based
> filtering will not work because its support seems to have been disabled in
> Dolphin's file management KPart. Hence, I have disabled that field from being
> displayed.

@ Dawit:
I have just commented this addon from konqi docs, does it need to be uncommented/adapted to your changes now?
Comment 8 Dawit Alemayehu 2011-11-22 00:34:57 UTC
(In reply to comment #7)
> (In reply to comment #6)
> > 
> > The good news is that I have found the workaround to the problem that prevented
> > the mime-type based filter from working in the first place ; so at least that
> > can be fixed.
> > 
> > The bad news is that only the mime-type based filtering will work. Name based
> > filtering will not work because its support seems to have been disabled in
> > Dolphin's file management KPart. Hence, I have disabled that field from being
> > displayed.
> 
> @ Dawit:
> I have just commented this addon from konqi docs, does it need to be
> uncommented/adapted to your changes now?

Probably. I will commit my changes in a few minutes into the 4.7 branch. So for 4.7.4, the original plugin without support for filtering by name will work as it did before.
Comment 9 Dawit Alemayehu 2011-11-22 00:39:36 UTC
Git commit 664f98da256fc79646d390498656afa99122f8ec by Dawit Alemayehu.
Committed on 21/11/2011 at 22:36.
Pushed by adawit into branch 'KDE/4.7'.

Make the directory filter plugin work for the dolphin filemanagement part.

BUG: 279281
FIXED-IN: 4.7.4

M  +13   -12   konq-plugins/dirfilter/dirfilterplugin.cpp

http://commits.kde.org/kde-baseapps/664f98da256fc79646d390498656afa99122f8ec
Comment 10 Dawit Alemayehu 2011-11-22 00:40:06 UTC
Git commit afc75e9d9ede9c2bbd332b8227342cf213f00c68 by Dawit Alemayehu.
Committed on 21/11/2011 at 22:36.
Pushed by adawit into branch 'master'.

Make the directory filter plugin work for the dolphin filemanagement part.

BUG: 279281
FIXED-IN: 4.7.4

(cherry picked from commit 664f98da256fc79646d390498656afa99122f8ec)

M  +13   -12   konq-plugins/dirfilter/dirfilterplugin.cpp

http://commits.kde.org/kde-baseapps/afc75e9d9ede9c2bbd332b8227342cf213f00c68
Comment 11 Becheru Petru-Ioan 2011-12-25 12:10:32 UTC
bug #120138 request a filename filter
Comment 12 Simon St James 2012-05-03 09:31:49 UTC
Created attachment 70823 [details]
Patch to restore the dirfilterplugin filename filter

Patch to restore the filename filter widget.
Comment 13 bernardinowilliams 2012-09-13 12:32:41 UTC
Why is this marked as fixed?
I am running 4.8.4 and I still can't see the filter bar in Konqueror.
Did I get something wrong?
Comment 14 Dawit Alemayehu 2012-09-13 12:46:25 UTC
(In reply to comment #13)
> Why is this marked as fixed?
> I am running 4.8.4 and I still can't see the filter bar in Konqueror.
> Did I get something wrong?

See comment #6, comment #9 and comment #11. The name filter bar was a hack that never worked once Konqueror started using Dolphin's filemanagement KPart. The resolution was to completely remove it. For KDE 4.10 all of that will change now that we have a nice extension that allows us to easily provide name and type based filtering from KPart plugins.
Comment 15 bernardinowilliams 2012-09-13 12:59:56 UTC
Thanks! 
I had read the comments you point to. My point was rather that those are not solutions and my question was if there was one that I had missed.
What you are telling me about 4.10 is -fortunately- a solution.
Thanks once again.