Make the directory filter plugin work for the dolphin filemanagement part.

BUG: 279281
FIXED-IN: 4.7.4